--- a/Focus2012/AndroidManifest.xml
+++ b/Focus2012/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <service android:name=".twitter.TwitterPollService" >
         </service>
 
-        <!-- receiver android:name=".diary.AlarmReceiver"></receiver> -->
+        <receiver android:name=".diary.ReminderReceiver"></receiver>
 
         <uses-library
             android:name="com.google.android.maps"
