--- a/Focus2012/project.properties
+++ b/Focus2012/project.properties
@@ -11,3 +11,4 @@
 target=Google Inc.:Google APIs:17
 android.library.reference.1=../android-mapviewballoons/android-mapviewballoons
 android.library.reference.2=../ActionBarSherlock/library
+android.library.reference.3=../google-play-services_lib
