--- a/Focus2012/AndroidManifest.xml
+++ b/Focus2012/AndroidManifest.xml
@@ -13,6 +13,19 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <permission
+        android:name="org.alpha.focus2012.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="org.alpha.focus2012.permission.MAPS_RECEIVE" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +34,10 @@
         android:theme="@style/AlphaTheme" >
         <service android:name=".data.DownloadService" >
         </service>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCy-HEMmem7-SvgQnqsgWy_hO9COU8JHs8" />
 
         <activity
             android:name=".MainActivity"
@@ -35,7 +52,8 @@
         <service android:name=".twitter.TwitterPollService" >
         </service>
 
-        <receiver android:name=".diary.ReminderReceiver"></receiver>
+        <receiver android:name=".diary.ReminderReceiver" >
+        </receiver>
 
         <uses-library
             android:name="com.google.android.maps"
@@ -50,6 +68,8 @@
         <activity android:name=".diary.SeminarOptionsActivity" >
         </activity>
         <activity android:name=".diary.RateSessionActivity" >
+        </activity>
+        <activity android:name=".diary.ReminderActivity" >
         </activity>
         <activity android:name=".diary.SessionDetailActivity" >
         </activity>
