--- a/Conference2013/AndroidManifest.xml
+++ b/Conference2013/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.alpha.focus2012"
+    package="org.alpha.conference2013"
     android:versionCode="3"
     android:versionName="1.3" >
 
@@ -32,7 +32,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AlphaTheme" >
-        <service android:name=".data.DownloadService" >
+        <service android:name="org.alpha.focus2012.data.DownloadService" >
         </service>
 
         <meta-data
@@ -40,7 +40,7 @@
             android:value="AIzaSyCy-HEMmem7-SvgQnqsgWy_hO9COU8JHs8" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="org.alpha.focus2012.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,51 +49,51 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".twitter.TwitterPollService" >
+        <service android:name="org.alpha.focus2012.twitter.TwitterPollService" >
         </service>
 
-        <receiver android:name=".diary.ReminderReceiver" >
+        <receiver android:name="org.alpha.focus2012.diary.ReminderReceiver" >
         </receiver>
 
         <uses-library
             android:name="com.google.android.maps"
             android:required="true" />
 
-        <activity android:name=".twitter.TwitterActivity" >
+        <activity android:name="org.alpha.focus2012.twitter.TwitterActivity" >
         </activity>
-        <activity android:name=".more.VideoActivity" >
+        <activity android:name="org.alpha.focus2012.more.VideoActivity" >
         </activity>
-        <activity android:name=".speakers.SpeakerDetailActivity" >
+        <activity android:name="org.alpha.focus2012.speakers.SpeakerDetailActivity" >
         </activity>
-        <activity android:name=".diary.SeminarOptionsActivity" >
+        <activity android:name="org.alpha.focus2012.diary.SeminarOptionsActivity" >
         </activity>
-        <activity android:name=".diary.RateSessionActivity" >
+        <activity android:name="org.alpha.focus2012.diary.RateSessionActivity" >
         </activity>
-        <activity android:name=".diary.ReminderActivity" >
+        <activity android:name="org.alpha.focus2012.diary.ReminderActivity" >
         </activity>
-        <activity android:name=".diary.SessionDetailActivity" >
+        <activity android:name="org.alpha.focus2012.diary.SessionDetailActivity" >
         </activity>
-        <activity android:name=".diary.SessionsBySpeakerActivity" >
+        <activity android:name="org.alpha.focus2012.diary.SessionsBySpeakerActivity" >
         </activity>
-        <activity android:name=".diary.SessionsByHourActivity" >
+        <activity android:name="org.alpha.focus2012.diary.SessionsByHourActivity" >
         </activity>
-        <activity android:name=".map.VenueMapActivity" >
+        <activity android:name="org.alpha.focus2012.map.VenueMapActivity" >
         </activity>
-        <activity android:name=".map.VenueDetailActivity" >
+        <activity android:name="org.alpha.focus2012.map.VenueDetailActivity" >
         </activity>
-        <activity android:name=".map.FloorplanActivity" >
+        <activity android:name="org.alpha.focus2012.map.FloorplanActivity" >
         </activity>
-        <activity android:name=".alerts.AlertsActivity" >
+        <activity android:name="org.alpha.focus2012.alerts.AlertsActivity" >
         </activity>
-        <activity android:name=".page.PageActivity" >
+        <activity android:name="org.alpha.focus2012.page.PageActivity" >
         </activity>
-        <activity android:name=".faqs.FaqsActivity" >
+        <activity android:name="org.alpha.focus2012.faqs.FaqsActivity" >
         </activity>
-        <activity android:name=".offers.OffersActivity" >
+        <activity android:name="org.alpha.focus2012.offers.OffersActivity" >
         </activity>
-        <activity android:name=".events.EventsActivity" >
+        <activity android:name="org.alpha.focus2012.events.EventsActivity" >
         </activity>
-        <activity android:name=".events.EventDetailActivity" >
+        <activity android:name="org.alpha.focus2012.events.EventDetailActivity" >
         </activity>
 
         <service android:name="com.parse.PushService" />
